<resources>
    <string name="app_name">Swift-Travel</string>

    <string name="transport">Enter a Transport vehicle</string>
    <string name="transport_hint">Enter how (with what vehicle) you arrived</string>
    <string name="name_hint">Enter Name</string>
    <string name="description_hint">Enter Description</string>
    <string name="create">Create</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_entry_title">Delete Entry</string>
    <string name="delete_entry_text">Do you really want to delete this entry?</string>

    <string name="dialog_close">OK</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="search">Search</string>
    <string name="place_holder_image">Placeholder image</string>

    <string name="length_error">Check the input length</string>
    <string name="duration_error">You have to select a duration</string>
    <string name="default_error_title">Error</string>
    <string name="default_error_text">An error occurred, please contact the owner of the app</string>
    <string name="internet_connection_error_title">Internet connection error</string>
    <string name="internet_connection_error_text">You have to be connected to the internet, connect to a network and try again</string>
    <string name="add_entry_to_list_error_title">List entries</string>
    <string name="add_entries_to_list_error_text">An error occurred with listing the entries, try again later</string>
    <string name="duration_overlap_error_title">Duration Overlap</string>
    <string name="duration_overlap_error_text">Durations are not allowed to overlap, try another date</string>

    <string name="trips">Trips</string>
    <string name="trip_name">Trip name</string>
    <string name="trip_origin_destination">Origin and Destination</string>
    <string name="trip_duration">Duration</string>
    <string name="create_trip_title">Create Trip</string>
    <string name="trip_create_button_text">Create</string>
    <string name="add_trip">Add Trip</string>

    <string name="countries">Countries</string>
    <string name="country_name">Country name</string>
    <string name="country_duration">Duration in the country</string>
    <string name="add_country">Add country</string>

    <string name="cities">Cities</string>
    <string name="city_name">City name</string>
    <string name="city_duration">Duration in city</string>
    <string name="select_city_duration">Select duration in city</string>
    <string name="create_city_title">Create City</string>

    <string name="days">Days</string>
    <string name="day">Day</string>
    <string name="day_date">Date of the day</string>

    <string name="locations">Locations</string>
    <string name="location_name">Location name</string>
    <string name="location_duration">Duration at the location</string>
    <string name="select_location_duration">Select duration in Location</string>
    <string name="create_location_title">Create Location</string>
    <string name="add_location">Add Location</string>

    <string name="images">Images</string>
    <string name="add_image">Add image</string>

    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="password_confirm_hint">Confirm your password</string>
    <string name="password_new_hint">Enter a new password</string>
    <string name="password_new_confirm_hint">Confirm your new password</string>

    <string name="login">Login</string>
    <string name="login_error">You have to fill in your email and password</string>
    <string name="login_unsuccessful_text">Please check your inputs and try again</string>
    <string name="login_unsuccessful_title">We could not log you in</string>

    <string name="google_login">Login with google</string>
    <string name="google_login_unsuccessful_title">Google Login</string>
    <string name="google_login_unsuccessful_text">You could not be logged in with Google, try again later</string>

    <string name="register">Register</string>
    <string name="registered_yet">Not registered yet?</string>
    <string name="already_registered">Already registered?</string>

    <string name="please">Please</string>
    <string name="email_empty">Please enter an email</string>
    <string name="password_empty">Please enter a password</string>

    <string name="change_password">Change password</string>
    <string name="success">Success!</string>
    <string name="password_changed">Your password has been changed.</string>
    <string name="password_does_not_match">The password does not match with your old one</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="passwords_cannot_be_the_same">The old password cannot be the same as the new one</string>

    <string name="user_title">User</string>
    <string name="profile_image">Profile Image</string>
    <string name="settings">Settings</string>
    <string name="auto_safe">Safe data online</string>

    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_title">Delete account</string>
    <string name="delete_account_text">Do you really want to delete your account?</string>
    <string name="timeline_image">image of the timeline</string>

    <string name="category_hotel">Hotel</string>
    <string name="category_restaurant">Restaurant</string>
    <string name="category_location">Location</string>
    <string name="category_error">Category dropdown error. Please restart the app.</string>
    <string name="category">Category:</string>
</resources>