<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="98dp"
    android:descendantFocusability="blocksDescendants">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_corners"
        android:descendantFocusability="blocksDescendants"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_three_line_list"
            android:layout_width="@dimen/list_image_size"
            android:layout_height="@dimen/list_image_size"
            android:layout_marginStart="@dimen/list_image_margin_start"
            android:layout_marginTop="@dimen/list_image_margin_top"
            android:contentDescription="@string/place_holder_image"
            android:scaleType="fitCenter"
            android:src="@drawable/placeholder_icon"
            app:layout_constraintBottom_toBottomOf="@id/duration_three_line_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/delete_three_line_list"
            android:layout_width="@dimen/icon_button_size"
            android:layout_height="@dimen/icon_button_size"
            android:layout_marginTop="@dimen/three_line_list_icon_button_margin_top"
            android:layout_marginEnd="@dimen/list_icon_button_margin_end"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/delete"
            android:src="@drawable/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_three_line_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/trip_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/standard_text_and_icons"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/delete_three_line_list"
            app:layout_constraintStart_toEndOf="@+id/image_three_line_list"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/origin_destination_three_line_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trip_origin_destination"
            android:textColor="@color/standard_text_and_icons"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/name_three_line_list"
            app:layout_constraintStart_toStartOf="@id/name_three_line_list"
            app:layout_constraintTop_toBottomOf="@id/name_three_line_list" />

        <TextView
            android:id="@+id/duration_three_line_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/trip_duration"
            android:textColor="@color/standard_text_and_icons"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/origin_destination_three_line_list"
            app:layout_constraintStart_toStartOf="@id/name_three_line_list"
            app:layout_constraintTop_toBottomOf="@id/origin_destination_three_line_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>