<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <include
        layout="@layout/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="@dimen/standard_element_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/top_element_margin_start"
        android:layout_marginTop="@dimen/top_element_margin_top"
        android:layout_marginEnd="@dimen/top_element_margin_end"
        android:text="@string/login"
        android:textSize="@dimen/title_text_size"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_input"
        android:layout_width="@dimen/standard_element_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_element_margin_top"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="@id/login_title"
        app:layout_constraintStart_toStartOf="@id/login_title"
        app:layout_constraintTop_toBottomOf="@id/login_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_input"
        android:layout_width="@dimen/standard_element_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_element_margin_top"
        android:importantForAutofill="no"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/login_email_input"
        app:layout_constraintStart_toStartOf="@id/login_email_input"
        app:layout_constraintTop_toBottomOf="@id/login_email_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            tools:text="password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/standard_element_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginTop="@dimen/first_element_margin_top"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/login_password_input"
        app:layout_constraintStart_toStartOf="@id/login_password_input"
        app:layout_constraintTop_toBottomOf="@id/login_password_input" />

    <Button
        android:id="@+id/login_register_button"
        android:layout_width="@dimen/standard_element_width"
        android:layout_height="@dimen/submit_button_height"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@drawable/rounded_button"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@id/login_registered_yet"
        app:layout_constraintStart_toStartOf="@id/login_registered_yet"
        app:layout_constraintTop_toBottomOf="@id/login_registered_yet" />

    <TextView
        android:id="@+id/login_registered_yet"
        android:layout_width="@dimen/standard_element_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/first_element_margin_top"
        android:text="@string/registered_yet"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@id/login_button"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/login_with_google" />

    <Button
        android:id="@+id/login_with_google"
        android:layout_width="@dimen/standard_element_width"
        android:layout_height="@dimen/standard_button_height"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@drawable/rounded_button"
        android:text="@string/google_login"
        app:icon="@drawable/google"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="@id/login_button"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/login_button" />


</androidx.constraintlayout.widget.ConstraintLayout>